@@ -37,8 +37,8 @@ class SkillAlignServiceTest {
     @Test
     @DisplayName("缓存命中 exact_or_alias → 直接返回, 不查 Neo4j")
     void cacheHit_skipsNeo4j() {
-        when(jdbc.query(any(String.class), any(org.springframework.jdbc.core.RowMapper.class), eq("python")))
-                .thenReturn(List.of("skill:python-basics"));
+        when(jdbc.query(any(String.class), org.mockito.ArgumentMatchers.<org.springframework.jdbc.core.RowMapper<String[]>>any(), any(Object[].class)))
+                .thenReturn(Collections.singletonList(new String[]{"python", "skill:python-basics"}));
 
         Map<String, String> out = svc.align(List.of("python"));
 
@@ -49,8 +49,8 @@ class SkillAlignServiceTest {
     @DisplayName("缓存命中 miss (node_id=NULL) → 返回 null, 不再查 Neo4j")
     void missCacheReturnsNull() {
         // miss 缓存的 node_id 为 null
-        when(jdbc.query(any(String.class), any(org.springframework.jdbc.core.RowMapper.class), eq("概率论")))
-                .thenReturn(Collections.singletonList(null));
+        when(jdbc.query(any(String.class), org.mockito.ArgumentMatchers.<org.springframework.jdbc.core.RowMapper<String[]>>any(), any(Object[].class)))
+                .thenReturn(Collections.singletonList(new String[]{"概率论", null}));
 
         Map<String, String> out = svc.align(List.of("概率论"));
 
@@ -61,6 +61,18 @@ class SkillAlignServiceTest {
     @DisplayName("空输入 → 空输出, 不查 DB")
     void emptyInput() {
         Map<String, String> out = svc.align(List.of());
+        assertThat(out).isEmpty();
+    }
+
+    @Test
+    @DisplayName("Neo4j 不可用 → 返回当前缓存结果, 不把临时故障写成 miss")
+    void neo4jUnavailableFallsBackWithoutPoisoningCache() {
+        when(jdbc.query(any(String.class), org.mockito.ArgumentMatchers.<org.springframework.jdbc.core.RowMapper<String[]>>any(), any(Object[].class)))
+                .thenReturn(List.of());
+        when(neo4j.session()).thenThrow(new IllegalStateException("neo4j unavailable"));
+
+        Map<String, String> out = svc.align(List.of("java"));
+
         assertThat(out).isEmpty();
     }
 }
